:art: refactor(follow): 조회 시 username 추가